--- a/MusicPlayerstru.html
+++ b/MusicPlayerstru.html
@@ -5,11 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--css file connected through this code-->
+  <link rel="stylesheet" type="text/css" href="Style.css">
+
   <title>Music player</title>
 </head>
 
 <body>
-  <h1>Trying to make changes in the music player</h1>
+  <header>
+    <div class="left_menu_side"></div>
+    <div class="right_song_side"></div>
+    <div class="bottom_play_side"></div>
+  </header>
+
+
 
 </body>
 
