--- a/MusicPlayerstru.html
+++ b/MusicPlayerstru.html
@@ -6,17 +6,314 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
   <!--css file connected through this code-->
-  <link rel="stylesheet" type="text/css" href="Style.css">
+  <link rel="stylesheet" href="Style.css">
 
   <title>Music player</title>
 </head>
 
 <body>
   <header>
-    <div class="left_menu_side"></div>
-    <div class="right_song_side"></div>
-    <div class="bottom_play_side"></div>
+    <div class="left_menu_side">
+      <h1>Playlist</h1>
+      <div class="playlist">
+        <h4 class="active"><span></span><i class="bi bi-music-note"></i>Play</h4>
+        <h4><span></span><i class="bi bi-music-note"></i>Last Listening</h4>
+        <h4><span></span><i class="bi bi-music-note"></i>Recommended</h4>
+      </div>
+
+      <div class="menuside_song_bottom">
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/1.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="1"></i>
+        </li>
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="2"></i>
+        </li>
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="3"></i>
+        </li>
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="4"></i>
+        </li>
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="5"></i>
+        </li>
+
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="6"></i>
+        </li>
+
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="7"></i>
+        </li>
+
+
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="8"></i>
+        </li>
+
+        <li class="songItem">
+          <span>01</span>
+          <img src="assets/img/10.jpg" alt="">
+          <h5>On My Way <br>
+            <div class="subtitle">Alan Walker</div>
+          </h5>
+          <i class="bi playListPlay bi-play-fill" id="9"></i>
+        </li>
+      </div>
+    </div>
+
+
+
+
+
+
+    <!--          song side section              -->
+    <div class="right_song_side">
+      <nav>
+        <ul>
+          <li>DISCOVER</li>
+          <li>MY LIBRARY</li>
+          <li>RADIO</li>
+        </ul>
+
+        <div class="search">
+          <i class="bi bi-search"></i>
+          <input type="text" placeholder="search songs..">
+        </div>
+      </nav>
+
+
+      <div class="songs">
+        <div class="h4">
+          <h4 style="color: white;">Indian songs</h4>
+          <div class="btns">
+            <i class="bi bi-caret-left-fill"></i>
+            <i class="bi bi-caret-right-fill"></i>
+          </div>
+        </div>
+
+        <div class="anime_song">
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/1.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+
+        </div>
+
+
+      </div>
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+    <!--             play section                              -->
+    <div class="bottom_play_side">
+      <!-- <div class="wave">
+        <div class="wave1"></div>
+
+      </div> -->
+      <div class="icon">
+        <i class="bi bi-skip-start-fill"></i>
+        <i class="bi bi-play-fill"></i>
+        <i class="bi bi-skip-start-fill"></i>
+      </div>
+
+      <span id="Start">0.00</span>
+      <div class="bar">
+        <input type="range" id="seek" min="0" max="100">
+      </div>
+      <span id="End">0.30</span>
+
+
+      <div class="volume">
+        <i class="bi bi-volume-off-fill"></i>
+        <input type="range" id="seek" min="0" max="100">
+      </div>
+
+
+
+
+
+
+    </div>
   </header>
 
 
