song side section feaute changed

--- a/MusicPlayerstru.html
+++ b/MusicPlayerstru.html
@@ -265,15 +265,24 @@
               <div class="subtitle">Alan Walker</div>
             </h5>
           </li>
-
-
-
         </div>
-
-
       </div>
 
+      <div class="popular_artist">
+        <div class="h4">
+          <h4 style="color: white;">popular artist</h4>
+          <div class="btns">
+            <i class="bi bi-caret-left-fill"></i>
+            <i class="bi bi-caret-right-fill"></i>
+          </div>
+        </div>
+        <div class="item">
+          <li>
+            <img src="assets/img/atif.jpg">
+          </li>
 
+        </div>
+      </div>
 
 
 
