--- a/MusicPlayerstru.html
+++ b/MusicPlayerstru.html
@@ -36,7 +36,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/11.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -45,7 +45,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/15.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -54,7 +54,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/17.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -63,7 +63,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/8.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -73,7 +73,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/7.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -83,7 +83,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/18.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -94,7 +94,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/5.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -103,7 +103,7 @@
 
         <li class="songItem">
           <span>01</span>
-          <img src="assets/img/10.jpg" alt="">
+          <img src="assets/img/4.jpg" alt="">
           <h5>On My Way <br>
             <div class="subtitle">Alan Walker</div>
           </h5>
@@ -155,7 +155,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/2.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -166,7 +166,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/3.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -177,7 +177,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/4.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -188,7 +188,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/5.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -198,7 +198,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/18.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -209,19 +209,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
-              <i class="bi bi-play-circle-fill"></i>
-            </div>
-            <h5>On My Way <br>
-              <div class="subtitle">Alan Walker</div>
-            </h5>
-          </li>
-
-
-
-          <li>
-            <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/10.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -233,20 +221,7 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
-              <i class="bi bi-play-circle-fill"></i>
-            </div>
-            <h5>On My Way <br>
-              <div class="subtitle">Alan Walker</div>
-            </h5>
-          </li>
-
-
-
-
-          <li>
-            <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/9.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
@@ -258,13 +233,32 @@
 
           <li>
             <div class="img_play">
-              <img src="assets/img/1.jpg" alt="">
+              <img src="assets/img/7.jpg" alt="">
               <i class="bi bi-play-circle-fill"></i>
             </div>
             <h5>On My Way <br>
               <div class="subtitle">Alan Walker</div>
             </h5>
           </li>
+
+          <li>
+            <div class="img_play">
+              <img src="assets/img/6.jpg" alt="">
+              <i class="bi bi-play-circle-fill"></i>
+            </div>
+            <h5>On My Way <br>
+              <div class="subtitle">Alan Walker</div>
+            </h5>
+          </li>
+
+
+
+
+
+
+
+
+
         </div>
       </div>
 
@@ -280,6 +274,50 @@
           <li>
             <img src="assets/img/atif.jpg">
           </li>
+
+          <li>
+            <img src="assets/img/alan.jpg">
+          </li>
+
+
+          <li>
+            <img src="assets/img/arjit.jpg">
+          </li>
+
+
+          <li>
+            <img src="assets/img/justin-bieber-lede.jpg">
+          </li>
+
+          <li>
+            <img src="assets/img/honey.jpg">
+          </li>
+
+          <li>
+            <img src="assets/img/guru.jpg">
+          </li>
+
+          <li>
+            <img src="assets/img/Diljit_Dosanjh.jpg">
+          </li>
+
+
+          <li>
+            <img src="assets/img/dhvani.jpg">
+          </li>
+
+
+          <li>
+            <img src="assets/img/neha.jpg">
+          </li>
+
+
+          <li>
+            <img src="assets/img/jubin Nautiyal.jpg">
+          </li>
+
+
+
 
         </div>
       </div>
