last change done 22/08/22

--- a/MusicPlayerstru.html
+++ b/MusicPlayerstru.html
@@ -16,6 +16,7 @@
 
 <body>
   <header>
+    <!--left side section of the page-->
     <div class="left_menu_side">
       <h1>Playlist</h1>
       <div class="playlist">
@@ -117,7 +118,7 @@
 
 
 
-    <!--          song side section              -->
+    <!--          Right side: song side section of the page              -->
     <div class="right_song_side">
       <nav>
         <ul>
@@ -250,15 +251,6 @@
               <div class="subtitle">Alan Walker</div>
             </h5>
           </li>
-
-
-
-
-
-
-
-
-
         </div>
       </div>
 
@@ -315,28 +307,14 @@
           <li>
             <img src="assets/img/jubin Nautiyal.jpg">
           </li>
-
-
-
-
         </div>
       </div>
-
-
-
-
-
-
     </div>
 
 
 
-    <!--             play section                              -->
+    <!--             bottom section : play section of the page                           -->
     <div class="bottom_play_side">
-      <!-- <div class="wave">
-        <div class="wave1"></div>
-
-      </div> -->
       <div class="icon">
         <i class="bi bi-skip-start-fill"></i>
         <i class="bi bi-play-fill"></i>
@@ -354,17 +332,17 @@
         <i class="bi bi-volume-off-fill"></i>
         <input type="range" id="seek" min="0" max="100">
       </div>
-
-
-
-
-
-
     </div>
+
+
+
+
+
+
   </header>
-
-
-
 </body>
+
+
+
 
 </html>
